# Add main header-only library
cc_library(
    name = "ghostbasil",
    hdrs = glob(["include/**"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    defines = [
        "EIGEN_MATRIXBASE_PLUGIN=\\\"ghostbasil/util/eigen/matrixbase_plugin.hpp\\\"",
    ],
    deps = [
        "@eigen",
    ],
)

# Add common, library-agnostic tools
cc_library(
    name = "tools",
    srcs = glob([
        "src/tools/**/*.hpp",
        "src/tools/**/*.cpp",
    ]),
    hdrs = glob(["src/tools/**/*.hpp"]),
    includes = ["src"],
    data = ["//ghostbasil/reference/data:data"],
    deps = [
        "@eigen",
        "@bazel_tools//tools/cpp/runfiles",
    ],
    visibility = ["//visibility:public"],
)
