cc_library(
    name = "testutil",
    srcs = glob([
        "testutil/**/*.hpp",
        "testutil/**/*.cpp",
    ]),
    hdrs = glob([
        "testutil/**/*.hpp",
    ]),
    includes = ["."],
    deps = [
        "//ghostbasil",
    ],
    visibility = ["//visibility:public"],
)

[cc_test(
    name = type_,
    srcs = glob(["{}.cpp".format(type_)]),
    defines = ["EIGEN_INITIALIZE_MATRICES_BY_NAN"],
    deps = [
        ":testutil",
        "@com_google_googletest//:gtest_main",
        "@bazel_tools//tools/cpp/runfiles",
    ],
    data = ["//ghostbasil/test/reference/data:test_data"],
) for type_ in [
    "algorithm_unittest",
    "block_matrix_unittest",
    "fit_lasso_unittest",
    "fit_basil_unittest",
    "ghost_matrix_unittest",
    "inv_quad_form_unittest",
]]
