# Add common, library-agnostic tools
cc_library(
    name = "testutil",
    srcs = glob([
        "testutil/**/*.hpp",
        "testutil/**/*.cpp",
    ]),
    hdrs = glob([
        "testutil/**/*.hpp",
    ]),
    includes = ["."],
    data = ["//ghostbasil/test/testutil/reference/data:test_data"],
    deps = ["@bazel_tools//tools/cpp/runfiles"],
)

# Add sub-package tests
[cc_test(
    name = type_,
    srcs = glob([
        "{}/**/*.cpp".format(type_), 
        "{}/**/*.hpp".format(type_),
    ]),
    defines = ["EIGEN_INITIALIZE_MATRICES_BY_NAN"],
    deps = [
        "//ghostbasil",
        ":testutil",
        "@com_google_googletest//:gtest_main",
    ],
) for type_ in [
    "util",
    "research",
    "matrix",
    "optimization",
]]
