# Add sub-package tests
[cc_test(
    name = type_,
    srcs = glob([
        "{}/**/*.cpp".format(type_), 
        "{}/**/*.hpp".format(type_),
    ]),
    includes = ['.'],
    defines = ["EIGEN_INITIALIZE_MATRICES_BY_NAN"],
    deps = [
        "//ghostbasil",
        "//ghostbasil:tools",
        "@com_google_googletest//:gtest_main",
    ],
) for type_ in [
    "util",
    "research",
    "matrix",
    "optimization",
]]
