cc_library(
    name = "testutil",
    srcs = glob([
        "testutil/**/*.hpp",
        "testutil/**/*.cpp",
    ]),
    hdrs = glob([
        "testutil/**/*.hpp",
    ]),
    includes = ["."],
    deps = [
        "//src/ghostbasil:ghostbasil",
    ],
)

[cc_test(
    name = type_,
    srcs = glob(["{}.cpp".format(type_)]),
    defines = ["EIGEN_INITIALIZE_MATRICES_BY_NAN"],
    deps = [
        ":testutil",
        "//src/ghostbasil:ghostbasil",
        "@com_google_googletest//:gtest_main",
        "@bazel_tools//tools/cpp/runfiles",
    ],
    data = ["//src/ghostbasil/test/reference/data:test_data"],
) for type_ in [
    "fit_lasso_unittest",
    "fit_basil_unittest",
]]
